# hypersdk

./: .envrc  .gitignore  .golangci.bck.yml  .golangci.yml  .rustc_info.json  .shellcheckrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SaveContract.md  benchvset.cpu  benchvset.mem  cpu.prof  flake.nix  go.mod  go.sum  go.work  go.work.sum  go_header_style.toml  hypersdk-header-style.toml  hypersdk.code-workspace  libsimulator.h  license-header  license-header.txt  license-style.txt  license.yml  licenserc.toml  res-linux  res-mac  restart_bench.sh  token.wat  tools.go  warp-todo.md
x/contracts/examples/counter/: Cargo.toml
x/contracts/examples/counter-external/: Cargo.toml
x/contracts/examples/counter-external/src/: lib.rs
x/contracts/examples/counter-external/tests/: integration.rs
x/contracts/examples/counter/src/: lib.rs
x/contracts/examples/counter/tests/: integration.rs
x/contracts/examples/multisig/: Cargo.toml
x/contracts/examples/multisig/src/: lib.rs
x/contracts/examples/multisig/tests/: integration.rs
x/contracts/examples/timelock/: Cargo.toml  build.rs
x/contracts/examples/timelock/src/: lib.rs
x/contracts/wasmlanche/: Cargo.toml  README.md
x/contracts/wasmlanche/benches/: call_contract.rs  call_contract_mem.rs  call_contract_time.rs  contracts.rs
x/contracts/wasmlanche/src/: build.rs  context.rs  host.rs  lib.rs  logging.rs  memory.rs  simulator.rs  state.rs  types.rs
x/contracts/wasmlanche/src/memory/: allocations.rs
x/contracts/wasmlanche/tests/: wasmtime-integration.rs
x/contracts/wasmlanche/tests/bench-crate/: Cargo.toml
x/contracts/wasmlanche/tests/bench-crate/src/: lib.rs
x/contracts/wasmlanche/tests/test-crate/src/: lib.rs
x/contracts/wasmlanche/wasmlanche-test/: Cargo.toml
x/contracts/wasmlanche/wasmlanche-test/src/: lib.rs
x/programs/cmd/simulator/: Cargo.toml  README.md  build.rs  go.mod  go.sum  simulator.go
x/programs/cmd/simulator/cmd/: config.go  config_test.go  errors.go  interpreter.go  key.go  keypair.go  log.go  logger.go  plan.go  plan_test.go  program.go  request.go  root.go  simulator.go  stdin.go  storage.go  storage_test.go
x/programs/cmd/simulator/cmd/custom_imports/: README.md
x/programs/cmd/simulator/cmd/testdata/: basic_token.yaml
x/programs/cmd/simulator/internal/actions/: actions.go  output.go  program_create.go  program_execute.go
x/programs/cmd/simulator/internal/consts/: consts.go
x/programs/cmd/simulator/internal/storage/: storage.go
x/programs/cmd/simulator/internal/utils/: utils.go
x/programs/cmd/simulator/scripts/: tests.unit.sh
x/programs/cmd/simulator/src/: codec.rs  context.rs  id.rs  lib.rs  param.rs  simulator.rs  step.rs  util.rs
x/programs/cmd/simulator/test/context_injection/: Cargo.toml
x/programs/cmd/simulator/vm/actions/: consts.go  program_create.go  program_execute.go
x/programs/cmd/simulator/vm/auth/: ed25519.go
x/programs/cmd/simulator/vm/config/: config.go
x/programs/cmd/simulator/vm/consts/: consts.go  types.go
x/programs/cmd/simulator/vm/controller/: controller.go  metrics.go  resolutions.go
x/programs/cmd/simulator/vm/genesis/: genesis.go  rules.go
x/programs/cmd/simulator/vm/registry/: registry.go
x/programs/cmd/simulator/vm/rpc/: dependencies.go  errors.go  jsonrpc_client.go  jsonrpc_server.go
x/programs/cmd/simulator/vm/storage/: state_manager.go  storage.go
x/programs/cmd/simulator/vm/utils/: utils.go
x/programs/examples/automated-market-maker/: Cargo.toml  README.md  build.rs
x/programs/examples/automated-market-maker/src/: lib.rs  tests.rs
x/programs/examples/automated-market-maker/tests/: integration.rs
x/programs/examples/counter/: Cargo.toml  build.rs
x/programs/examples/counter-external/: Cargo.toml
x/programs/examples/counter-external/src/: lib.rs
x/programs/examples/counter-external/tests/: integration.rs
x/programs/examples/counter/src/: lib.rs
x/programs/examples/counter/tests/: integration.rs
x/programs/examples/tutorial/: Cargo.toml
x/programs/examples/tutorial/src/: lib.rs
x/programs/examples/tutorial/tests/: integration.rs
x/programs/rust/examples/auth/: Cargo.toml  build.rs
x/programs/rust/examples/auth/src/: lib.rs
x/programs/rust/examples/automated-market-maker/: Cargo.toml
x/programs/rust/examples/automated-market-maker/src/: lib.rs  math.rs  tests.rs
x/programs/rust/examples/blackjack/: Cargo.toml
x/programs/rust/examples/counter/: .rustc_info.json  Cargo.toml  build.rs
x/programs/rust/examples/counter-external/: Cargo.toml
x/programs/rust/examples/lottery/: Cargo.toml
x/programs/rust/examples/multisig/: Cargo.toml
x/programs/rust/examples/nft/: Cargo.toml  README.md
x/programs/rust/examples/pokemon/: Cargo.toml
x/programs/rust/examples/single_nft/: Cargo.toml  README.md
x/programs/rust/examples/token/: Cargo.toml  README.md
x/programs/rust/examples/vault/: Cargo.toml  build.rs
x/programs/rust/examples/verify/: Cargo.toml
x/programs/rust/sdk-macros/: Cargo.toml
x/programs/rust/sdk-macros/src/: lib.rs
x/programs/rust/sdk-macros/tests/: compile.rs
x/programs/rust/sdk_macros/: Cargo.toml
x/programs/rust/sdk_macros/src/: lib.rs
x/programs/rust/wasmlanche-sdk/: Cargo.toml
x/programs/rust/wasmlanche-sdk/src/: balance.rs  build.rs  context.rs  errors.rs  host.rs  lib.rs  logging.rs  memory.rs  panic.rs  params.rs  program.rs  simulator.rs  state.rs  types.rs
x/programs/rust/wasmlanche-sdk/tests/: integration.rs  public_function.rs  recursive.rs
x/programs/rust/wasmlanche_sdk/: Cargo.toml
x/programs/rust/wasmlanche_sdk/src/: context.rs  errors.rs  lib.rs  memory.rs  program.rs  simulator.rs  state.rs  types.rs
x/programs/simulator/: Cargo.toml  README.md  build.rs  errors.go  libsimulator.h  state.go  storage.go
x/programs/simulator/common/: callbacks.h  types.h
x/programs/simulator/ffi/: ffi.go
x/programs/simulator/src/: bindings.rs  error.rs  lib.rs  main.rs  simulator.rs  state.rs  tests.rs  types.rs
x/programs/simulator/state/: errors.go  manager.go  state.go
x/programs/test/programs/amm/: Cargo.toml
(+3030 files in other folders)
