[workspace]
members = [
    "x/programs/sdk-macros",
    "x/programs/wasmlanche-sdk",
    "x/programs/examples/token",
    "x/programs/examples/counter",
    "x/programs/examples/counter-external",
    "x/programs/examples/automated-market-maker",
    "x/programs/wasmlanche-sdk/tests/test-crate",
    "x/programs/test/programs/*",
    "x/programs/simulator",
    "x/programs/examples/tutorial",
]
resolver = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
overflow-checks = true
panic = 'abort'
strip = true

[workspace.dependencies]
sdk-macros = { path = "x/programs/sdk-macros" }
wasmlanche-sdk = { path = "x/programs/wasmlanche-sdk" }
simulator = { path = "x/programs/simulator"}
thiserror = "1.0.61"
