[workspace]
members = [
  "x/contracts/sdk-macros",
  "x/contracts/wasmlanche",
  "x/contracts/examples/token",
  "x/contracts/examples/counter",
  "x/contracts/examples/counter-external",
  "x/contracts/examples/automated-market-maker",
  "x/contracts/wasmlanche/tests/test-crate",
  "x/contracts/test/contracts/*",
  "x/contracts/simulator",
  "x/contracts/examples/tutorial",
  "x/contracts/examples/multisig",
]
resolver = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
overflow-checks = true
panic = 'abort'
strip = true

[workspace.dependencies]
sdk-macros = { path = "x/contracts/sdk-macros" }
wasmlanche = { path = "x/contracts/wasmlanche" }
simulator = { path = "x/contracts/simulator" }
thiserror = "1.0.61"
