[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
wasmlanche-sdk = { workspace = true, features = ["debug"] }
thiserror = { workspace = true }

[build-dependencies]
wasmlanche-sdk = { workspace = true, features = ["build"] }
bindgen = "0.69.4"
serde_json = "1.0.122"
