[package]
name = "counter-external"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
wasmlanche = { workspace = true, features = ["debug"] }
counter = { path = "../counter", features = ["bindings"] }

[dev-dependencies]
wasmlanche = { workspace = true, features = ["debug", "test"] }

[build-dependencies]
wasmlanche = { workspace = true, features = ["build"] }
