[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
bindings = ["wasmlanche/bindings"]
test = ["wasmlanche/test"]

[dependencies]
wasmlanche = { workspace = true, features = ["debug"] }

[dev-dependencies]
wasmlanche = { workspace = true, features = ["debug", "test"] }

[build-dependencies]
wasmlanche = { workspace = true, features = ["build"] }
