[package]
name = "timelock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
wasmlanche.workspace = true
borsh = { version = "1.5.1", features = ["derive"] }

[dev-dependencies]
wasmlanche = { workspace = true, features = ["debug", "test"] }

[build-dependencies]
wasmlanche = { workspace = true, features = ["build"] }

[features]
debug = ["wasmlanche/debug"]
