[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
include = ["**/*.go"]

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["base64"] }
thiserror = { workspace = true }
borsh = { workspace = true }
