[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
include = ["**/*.go"]

[dependencies]
base64 = "0.22.1"
serde = { workspace = true }
serde_json = "1.0.117"
thiserror = { workspace = true }
borsh = { workspace = true }
wasmlanche-sdk = { workspace = true, features = ["debug", "test-utils"] }

[build-dependencies]
wasmlanche-sdk = { workspace = true, features = ["build"] }
