[package]
name = "automated-market-maker"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
token = { path = "../token", features = ["bindings"] }
wasmlanche = { workspace = true, features = ["debug"] }

[dev-dependencies]
wasmlanche = { workspace = true, features = ["debug", "test"] }

[build-dependencies]
wasmlanche = { workspace = true, features = ["build"] }
