[package]
name = "counter-external"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmlanche = { workspace = true, features = ["debug", "unit_tests"] }
counter = { path = "../counter", features = ["bindings"] }

[dev-dependencies]
simulator = { workspace = true }

[build-dependencies]
wasmlanche = { workspace = true, features = ["build"] }
