[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
bindings = []

[dependencies]
wasmlanche = { workspace = true, features = ["debug", "unit_tests"] }

[dev-dependencies]
simulator = { workspace = true }

[build-dependencies]
wasmlanche = { workspace = true, features = ["build"] }
