[package]
name = "sdk-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.63", features = ["full", "extra-traits"] }

[dev-dependencies]
borsh = { workpsace = true }
trybuild = "1.0.96"
wasmlanche-sdk = { path = "../wasmlanche-sdk" }
