[package]
name = "sdk-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full", "extra-traits"] }

[dev-dependencies]
borsh = { workspace = true }
seq-macro = "0.3.5"
trybuild = "1.0.96"
wasmlanche-sdk = { workspace = true }
