[package]
name = "sdk_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full", "extra-traits"] }

[dev-dependencies]
borsh = "1.5.0"
trybuild = "1.0.89"
wasmlanche-sdk = { path = "../wasmlanche-sdk" }
