[package]
name = "wasmlanche-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
bytemuck = { version = "1.17.0", features = ["derive"] }
displaydoc = { version = "0.2.5", default-features = false }
hashbrown = "0.14.5"
sdk-macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasmtime = "14"

[features]
build = []
debug = []
