[package]
name = "wasmlanche-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
bytemuck = { version = "1.17.0", features = ["derive"] }
sdk-macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasmtime = "14"

[features]
build = []
debug = []
# TODO: can set this based on the compile target, or even remove this flag entirely and cfg(target = wasm32-unknown-unknown) in the code
unit_tests = []
