[package]
name = "wasmlanche_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.46"
serde = { version = "1.0.185", features = ["derive"] }
serde_bare = "0.5.0"
serde_yaml = {version = "0.9.25", optional = true}
serde_json = { version = "1.0.107", optional = true }
sdk_macros = { version = "0.1.0", path = "../sdk_macros" }

[features]
simulator = ["serde_yaml", "serde_json"]

[lib]
