[package]
name = "wasmlanche_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.46"
sdk_macros = { version = "0.1.0", path = "../sdk_macros" }
borsh = { version = "1.2.0", features = ["derive"] }

# TODO: delete serde dependencies(simulator needs update) 
serde = { version = "1.0.185", features = ["derive"] }
serde_bare = "0.5.0"

# simulator
serde_json = { version = "1.0.107", optional = true }

[features]
default = []
simulator = ["serde_json"]

[lib]
