[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmlanche-sdk = { workspace = true, features = ["debug"] }
borsh = { workspace = true }
paste = "1.0.15"

[dev-dependencies]
simulator = { workspace = true }

[build-dependencies]
wasmlanche-sdk = { workspace = true, features = ["build"] }
