[package]
name = "automated-market-maker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# token = { path = "../token", features = ["bindings"] }
token = { path = "../token" }
wasmlanche-sdk = { workspace = true, features = ["debug"] }

[dev-dependencies]
simulator = { workspace = true }

[build-dependencies]
wasmlanche-sdk = { workspace = true, features = ["build"] }
