[package]
name = "blackjack"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]

[features]
bindings = []

[dependencies]
wasmlanche-sdk = { workspace = true, features = ["debug"] }
rand = {version = "0.8.5", features = ["small_rng"]}
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
simulator = { workspace = true }

[build-dependencies]
wasmlanche-sdk = { workspace = true, features = ["build"] }