[package]
name = "counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmlanche_sdk = { version = "0.1.0", path = "../../wasmlanche_sdk" }

[dev-dependencies]
wasmlanche_sdk = { version = "0.1.0", path = "../../wasmlanche_sdk", features=["simulator"]}
simulator_client = { version = "0.1.0", path = "../../simulator_client" }
async-std = { version = "1.6", features = ["attributes"]}
serde_json = "1.0.68"
serial_test = "2.0.0"
tonic = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
libc = "0.2"
nix = { version="0.28.0", features = ["process", "signal"] }

[lib]
crate-type = ["cdylib"] # set the crate(needed for cargo build to work properly)

# when creating a new project, you can uncomment the following lines to enable optimizations
# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# overflow-checks = true
# # https://doc.rust-lang.org/book/ch09-01-unrecoverable-errors-with-panic.html#unwinding-the-stack-or-aborting-in-response-to-a-panic
# panic = 'abort'
