[package]
name = "nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmlanche_sdk = { version = "0.1.0", path = "../../wasmlanche_sdk" }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.69"