[package]
name = "pokemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmlanche_sdk = { version = "0.1.0", path = "../../wasmlanche_sdk" }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.185", features = ["derive"] }


[lib]
crate-type = ["cdylib"] # set the crate(needed for cargo build to work properly)
