[package]
name = "token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasmlanche-sdk = { workspace = true, features = ["debug"] }

[dev-dependencies]
simulator = { workspace = true }
wasmlanche-sdk = { workspace = true, features = ["build", "unit_test"] }

[build-dependencies]
wasmlanche-sdk = { workspace = true, features = ["build"] }

# [features]
# bindings = []

