[package]
name = "verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmlanche_sdk = { version = "0.1.0", path = "../../wasmlanche_sdk" }
# ed25519-dalek = { version = "2.0.0", features = ["rand_core"]} # for the generate SigningKey function

[lib]
crate-type = ["cdylib"] # set the crate(needed for cargo build to work properly)